SERVER-52612 Fix requireApiVersion for getMore and transactions