src/mongo/db/initialize_api_parameters.h
@@ -41,7 +41,10 @@ class OperationContext;
  * Parse a command's API Version parameters from a request and store the apiVersion,
  * apiStrict, and apiDeprecationErrors fields.
  */
-const APIParametersFromClient initializeAPIParameters(OperationContext* opCtx,
-                                                      const BSONObj& requestBody,
-                                                      Command* command);
+const APIParametersFromClient initializeAPIParameters(const BSONObj& requestBody, Command* command);
+
+/**
+ * If the server parameter "requireApiVersion" is set, enforce it.
+ */
+void enforceRequireAPIVersion(OperationContext* opCtx, Command* command);
 }  // namespace mongo
